# customer-rfm-segmentation-dashboard

./: .env_example  .gitignore  LICENSE  README.md  main.ipynb  pyproject.toml
dbt/: dbt_project.yml  profiles.yml
dbt/models/dim/: _dim_models.yml  dim_customers.sql
dbt/models/mart/: _mart_models.yml  mart_customer_rfm_features.sql
dbt/models/staging/: _sources.yml  _stg_models.yml  stg_retail.sql
notebooks/: 01_downoad_data.ipynb  01_ingestion_and_eda.ipynb  01_initial_load.ipynb  02_feature_engineering.ipynb  02_initial_eda.ipynb  02_load_data_to_sql.ipynb  03_calculate_rfm.ipynb  03_feature_engineering.ipynb  03_post_feature_eda.ipynb  03_segmentation_modeling.ipynb
sql/: 01_create_database.sql  01_terminate_backend_sessions.sql  02_create_table.sql  02_drop_database.sql  03_create_database.sql  03_load_data.sql  04_calculate_rfm.sql  04_create_table.sql  04_feature_engineering.sql  05_load_data.sql  06_feature_engineering.sql
sql/sql_create/: schema.sql
sql/sql_tasks/: feature_engineering.sql
src/: df_overview.py  download_data.py  eda_utils.py  feature_engineering.py  generate_metadata.py  pandas_feature_engineering.py  sql_feature_engineering.py
src/config/: config.py  constants.py  paths.py  sql.py
src/db_init/: db_setup.py
src/pipelines/: dbt_run.py  pipeline.py
src/tasks/: download.py  load.py  pd_feature_engineering.py  sql_feature_engineering.py
src/utils/: eda_utils.py  logger.py  sql_execute.py
